tests/snapshots/codegen_typescript__all_affinities.snap
---
source: tests/codegen_typescript.rs
assertion_line: 69
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "all_types": {
    Row: {
      col_integer: number | null;
      col_int: number | null;
      col_bigint: number | null;
      col_smallint: number | null;
      col_tinyint: number | null;
      col_medint: number | null;
      col_real: number | null;
      col_double: number | null;
      col_float: number | null;
      col_numeric: number | null;
      col_decimal: number | null;
      col_text: string | null;
      col_varchar: string | null;
      col_char: string | null;
      col_clob: string | null;
      col_date: string | null;
      col_datetime: string | null;
      col_time: string | null;
      col_blob: Uint8Array | null;
    };
    Insert: {
      col_integer?: number | null;
      col_int?: number | null;
      col_bigint?: number | null;
      col_smallint?: number | null;
      col_tinyint?: number | null;
      col_medint?: number | null;
      col_real?: number | null;
      col_double?: number | null;
      col_float?: number | null;
      col_numeric?: number | null;
      col_decimal?: number | null;
      col_text?: string | null;
      col_varchar?: string | null;
      col_char?: string | null;
      col_clob?: string | null;
      col_date?: string | null;
      col_datetime?: string | null;
      col_time?: string | null;
      col_blob?: Uint8Array | null;
    };
    Update: {
      col_integer?: number | null;
      col_int?: number | null;
      col_bigint?: number | null;
      col_smallint?: number | null;
      col_tinyint?: number | null;
      col_medint?: number | null;
      col_real?: number | null;
      col_double?: number | null;
      col_float?: number | null;
      col_numeric?: number | null;
      col_decimal?: number | null;
      col_text?: string | null;
      col_varchar?: string | null;
      col_char?: string | null;
      col_clob?: string | null;
      col_date?: string | null;
      col_datetime?: string | null;
      col_time?: string | null;
      col_blob?: Uint8Array | null;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
