tests/snapshots/codegen_typescript__check_in_enum.snap
---
source: tests/codegen_typescript.rs
assertion_line: 151
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 2 enums.

export type Enums = {
  posts_subtype: "note" | "article" | "photo";
  posts_type: "entry" | "event";
};

export type Tables = {
  "posts": {
    Row: {
      id: number | null;
      title: string;
      type: Enums.posts_type;
      subtype: Enums.posts_subtype | null;
    };
    Insert: {
      id?: number | null;
      title: string;
      type: Enums.posts_type;
      subtype?: Enums.posts_subtype | null;
    };
    Update: {
      id?: number | null;
      title?: string;
      type?: Enums.posts_type;
      subtype?: Enums.posts_subtype | null;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
