tests/snapshots/codegen_typescript__multiple_tables.snap
---
source: tests/codegen_typescript.rs
assertion_line: 252
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 3 tables, 1 enums.

export type Enums = {
  posts_status: "draft" | "published" | "archived";
};

export type Tables = {
  "categories": {
    Row: {
      id: number | null;
      name: string;
    };
    Insert: {
      id?: number | null;
      name: string;
    };
    Update: {
      id?: number | null;
      name?: string;
    };
  };
  "comments": {
    Row: {
      id: number | null;
      post_id: number;
      author: string | null;
      body: string;
    };
    Insert: {
      id?: number | null;
      post_id: number;
      author?: string | null;
      body: string;
    };
    Update: {
      id?: number | null;
      post_id?: number;
      author?: string | null;
      body?: string;
    };
  };
  "posts": {
    Row: {
      id: number | null;
      category_id: number | null;
      title: string;
      body: string | null;
      status: Enums.posts_status;
    };
    Insert: {
      id?: number | null;
      category_id?: number | null;
      title: string;
      body?: string | null;
      status: Enums.posts_status;
    };
    Update: {
      id?: number | null;
      category_id?: number | null;
      title?: string;
      body?: string | null;
      status?: Enums.posts_status;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
