tests/snapshots/codegen_typescript__nullable_and_defaults.snap
---
source: tests/codegen_typescript.rs
assertion_line: 91
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "items": {
    Row: {
      "id": number;
      "name": string;
      "email": string | null;
      "score": number | null;
      "status": string;
    };
    Insert: {
      "id"?: number;
      "name": string;
      "email"?: string | null;
      "score"?: number | null;
      "status"?: string;
    };
    Update: {
      "id"?: number;
      "name"?: string;
      "email"?: string | null;
      "score"?: number | null;
      "status"?: string;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
