tests/snapshots/codegen_typescript__reserved_word_table_name.snap
---
source: tests/codegen_typescript.rs
assertion_line: 170
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "references": {
    Row: {
      id: number | null;
      url: string;
    };
    Insert: {
      id?: number | null;
      url: string;
    };
    Update: {
      id?: number | null;
      url?: string;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
