tests/snapshots/codegen_typescript__rowid_alias.snap
---
source: tests/codegen_typescript.rs
assertion_line: 111
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "users": {
    Row: {
      "id": number | null;
      "name": string;
      "email": string;
    };
    Insert: {
      "id"?: number | null;
      "name": string;
      "email": string;
    };
    Update: {
      "id"?: number | null;
      "name"?: string;
      "email"?: string;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
