tests/snapshots/codegen_typescript__schema_migrations_excluded.snap
---
source: tests/codegen_typescript.rs
assertion_line: 220
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "users": {
    Row: {
      "id": number | null;
      "name": string | null;
    };
    Insert: {
      "id"?: number | null;
      "name"?: string | null;
    };
    Update: {
      "id"?: number | null;
      "name"?: string | null;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
