tests/snapshots/codegen_typescript__text_primary_key.snap
---
source: tests/codegen_typescript.rs
assertion_line: 271
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "tags": {
    Row: {
      "slug": string;
      "name": string;
    };
    Insert: {
      "slug": string;
      "name": string;
    };
    Update: {
      "slug"?: string;
      "name"?: string;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
