tests/snapshots/codegen_typescript__without_rowid.snap
---
source: tests/codegen_typescript.rs
assertion_line: 130
expression: output
---
// Generated by stig. Do not edit by hand.
// Source: 1 tables, 0 enums.

export type Tables = {
  "kv": {
    Row: {
      key: string;
      value: string;
    };
    Insert: {
      key: string;
      value: string;
    };
    Update: {
      key?: string;
      value?: string;
    };
  };
};

export type TableName = keyof Tables;
export type Row<T extends TableName>    = Tables[T]["Row"];
export type Insert<T extends TableName> = Tables[T]["Insert"];
export type Update<T extends TableName> = Tables[T]["Update"];
